CHANGES IN FLTK 1.1.8

	- fl_arc() and fl_pie() did not draw properly on WIN32
	  when the start and end points were identical (STR
	  #1461)
	- Fl_Input and Fl_Text_Editor now hide the mouse pointer
	  when typing into them (STR #1466)
	- Implemented alpha blending for Quartz, WIN32, and X11
	- Check buttons did not redraw properly with box() set to
	  FL_NO_BOX (STR #1440)
	- Added the Bluecurve-inspired scheme "gtk+".
	- Updated documentation (STR #1420, STR #1421)
	- Fixed font caching issue (STR #1415)
	- Fixed crash in fl_file_chooser (STR #1410)
	- Fixed Fluid hotspot bug (STR #1416)
	- Fixed image copy code (STR #1412)
	- Fixed latin-to-roman text conversion (STR #1411)
	- Fixed Cygwin timeout for "select" calls (STR #1151)
	- Improved Mac OS X subwindow handling (STR #1402)
	- Fixed more inconsistencies between fl_draw and
	  fl_measure (STR #1408)
	- Fixed fl_measure which mistook a trailing '@@' for a
	  symbol (STR #1406)
	- Fixed GLUT behavior on window creation (STR #1403)
	- Fixed OS X bug that would hide tooltips before they
	  were shown (STR #1392)
	- Fixed Fl_Tabs tooltip reappearing (STR #1324)
	- Added a new demo game called "Block Attack!"
	- Updated the Sudoku game to show a notice about Hard and
	  Impossible puzzles having multiple solutions which are
	  not a bug or error (STR #1361)
	- Fixed filechooser to behave as documented when file
	  pattern changes (STR #1359)
	- Completed the global function index and added an
	  alphabetical list of all methods (STR #1319)
	- Avoiding problems with some platforms that don't 
	  implement hypot() (STR #1366)
	- Fixed floating point value formatting for Fl_Spinner
	  (STR #1331)
	- Fixed Fl_Positioner callback when released (STR #1387)
	- Fixed WIN32 zero size window issue (STR #1387)
	- Fixed Sudoku window positioning (STR #1398)
	- Fluid Code Declarations can now handle C++ style
	  comments (STR #1383)
	- Fixed uninitialized data in OS X and WIN32 timeout
	  functions (STR #1374).