@@ -3,7 +3,7 @@
 //
 // Fl_Tiled_Image test program for the Fast Light Tool Kit (FLTK).
 //
-// Copyright 1998-2005 by Bill Spitzak and others.
+// Copyright 1998-2006 by Bill Spitzak and others.
 //
 // This library is free software; you can redistribute it and/or
 // modify it under the terms of the GNU Library General Public
@@ -90,7 +90,6 @@ int main(int argc, char **argv) {
 
   Fl_Button b(340,365,50,25,"Close"); ::b = &b;
   b.callback(button_cb);
-  b.box(FL_PLASTIC_UP_BOX);
 
   group.end();
 
